--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       ],
       "@libs/dto": [
         "libs/dto/index.ts"
+      ],
+      "@libs/auth": [
+        "libs/auth/index.ts"
       ]
     }
   },
